--- a/index.Rmd
+++ b/index.Rmd
@@ -122,7 +122,7 @@ Here you will:
 2) Decide if you want your repository to be Public or Private   
 3) Press the green "Create repository from template" button  
 
-Great! Now you have a repository on GitHub which contains all the current [**COVIDScenarioPipeline**] ](https://github.com/HopkinsIDD/COVID19_Minimal){target="_blank"} files and code.
+Great! Now you have a repository on GitHub which contains all the current [**COVIDScenarioPipeline**](https://github.com/HopkinsIDD/COVID19_Minimal){target="_blank"} files and code.
 
 ***
 
@@ -139,57 +139,57 @@ Great! Now you have a repository on GitHub which contains all the current [**COV
 *** 
 
 
-We will begin by loading the packages that we will need:
+<!-- We will begin by loading the packages that we will need: -->
 
-```{r}
-library(here)
-library(readr)
-library(dplyr)
-```
-
-
- Package   | Use                                                                         
----------- |-------------
-[here](https://github.com/jennybc/here_here){target="_blank"}       | to easily load and save data
-[readr](https://readr.tidyverse.org/){target="_blank"}      | to import the CSV file data
+<!-- ```{r} -->
+<!-- library(here) -->
+<!-- library(readr) -->
+<!-- library(dplyr) -->
+<!-- ``` -->
 
 
+<!--  Package   | Use                                                                          -->
+<!-- ---------- |------------- -->
+<!-- [here](https://github.com/jennybc/here_here){target="_blank"}       | to easily load and save data -->
+<!-- [readr](https://readr.tidyverse.org/){target="_blank"}      | to import the CSV file data -->
 
 
-## **What are the data?**
-*** 
 
-If you want to make a table about variable info:
 
-Variable   | Details                                                                        
----------- |-------------
-**variable1**  | Variable info  <br> -- more details <br> -- more detials <br>  **Example**: Content content  
-**variable2**  | Variable info  <br> -- more details <br> -- more detials <br>  **Example**: Content content
+<!-- ## **What are the data?** -->
+<!-- ***  -->
 
-## **Data Import**
-*** 
+<!-- If you want to make a table about variable info: -->
 
-Put files in docs directory and use `here` package.
+<!-- Variable   | Details                                                                         -->
+<!-- ---------- |------------- -->
+<!-- **variable1**  | Variable info  <br> -- more details <br> -- more detials <br>  **Example**: Content content   -->
+<!-- **variable2**  | Variable info  <br> -- more details <br> -- more detials <br>  **Example**: Content content -->
 
-```{r}
-pm <-readr::read_csv(here("docs", "pm25_data.csv"))
-```
+<!-- ## **Data Import** -->
+<!-- ***  -->
 
-## **Data Exploration and Wrangling**
-*** 
+<!-- Put files in docs directory and use `here` package. -->
 
-We will also use the `%>%` pipe which can be used to define the input for later sequential steps. This will make more sense when we have multiple sequential steps using the same data object. To use the pipe notation we need to install and load dplyr as well.
+<!-- ```{r} -->
+<!-- pm <-readr::read_csv(here("docs", "pm25_data.csv")) -->
+<!-- ``` -->
 
-Scrollable content:
+<!-- ## **Data Exploration and Wrangling** -->
+<!-- ***  -->
 
-#### {.scrollable }
-```{r}
-# Scroll through the output!
-pm %>% 
-  distinct(state) %>%
-  print(n = 1e3)
-```
-####
+<!-- We will also use the `%>%` pipe which can be used to define the input for later sequential steps. This will make more sense when we have multiple sequential steps using the same data object. To use the pipe notation we need to install and load dplyr as well. -->
+
+<!-- Scrollable content: -->
+
+<!-- #### {.scrollable } -->
+<!-- ```{r} -->
+<!-- # Scroll through the output! -->
+<!-- pm %>%  -->
+<!--   distinct(state) %>% -->
+<!--   print(n = 1e3) -->
+<!-- ``` -->
+<!-- #### -->
 
 
 ## **New to RStudio**
